# openad-service-bmfm-sm

./: .dockerignore  .gitignore  Dockerfile  Dockerfile copy  Dockerfile copy 2  README.md  compose.yaml  compose.yml  openad.cfg  pyproject.toml  requirements.txt
bmfm_sm_api/: Dockerfile  requirements.txt  sm_implementation.py
bmfm_sm_api/bmfm_sm_api/: sm_implementation.py
bmfm_sm_api/bmfm_sm_api/docs/: BMFMSM.json  builder.py
bmfm_sm_api/docs/: BMFMSM.json
helm-chart/: Chart.yaml  README.md  values.yaml
helm-chart/templates/: NOTES.txt  _helpers.tpl  buildconfig.yaml  deployment.yaml  hpa.yaml  imagestream.yaml  ingress.yaml  route.yaml  service.yaml  serviceaccount.yaml  webhook-secret.yaml
helm-chart/templates/tests/: test-connection.yaml
